--- a/package.json
+++ b/package.json
@@ -15,13 +15,13 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "typescript": "^5.5.2"
+    "typescript": "5.5.2"
   },
   "devDependencies": {
-    "eslint": "^8.57.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-prettier": "^5.1.3",
-    "prettier": "^3.3.2",
-    "typescript-eslint": "^7.13.1"
+    "eslint": "8.57.0",
+    "eslint-config-prettier": "9.1.0",
+    "eslint-plugin-prettier": "5.1.3",
+    "prettier": "3.3.2",
+    "typescript-eslint": "7.13.1"
   }
 }
